--- a/package.json
+++ b/package.json
@@ -4,7 +4,12 @@
   "description": "web test automation cypress",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "login-regression-hs": "cypress run --browser chrome --spec 'cypress/e2e/authUser/Login.feature'",
+    "register-regression-hs": "cypress run --browser chrome --spec 'cypress/e2e/authUser/Register.feature'",
+    "bumdesma-regression-hs": "cypress run --browser chrome --spec 'cypress/e2e/bumdesma/Bumdesma.feature'",
+    "bumdesa-regression-hs": "cypress run --browser chrome --spec 'cypress/e2e/bumdesa/Bumdesa.feature'",
+    "owasp-regression-hs": "cypress run --browser chrome --spec 'cypress/e2e/owasp/Owasp.feature'"
   },
   "author": "dindamaylan",
   "license": "ISC",
