update sub domain, regression, fixing after regression, and add 2 scenario in menu buyer

--- a/cypress/fixtures/config.json
+++ b/cypress/fixtures/config.json
@@ -1,5 +1,5 @@
 {
-  "baseUrl" : "https://waroengkita.id/",
+  "baseUrl" : "https://waroengkita.id/din/",
   "errMsgBlank" : "This field is required.",
   "errMsgEmailFormat" : "Please enter a valid email address."
 }
