--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "register-regression-hs": "cypress run --browser chrome --spec 'cypress/e2e/authUser/Register.feature'",
     "bumdesma-regression-hs": "cypress run --browser chrome --spec 'cypress/e2e/bumdesma/Bumdesma.feature'",
     "bumdesa-regression-hs": "cypress run --browser chrome --spec 'cypress/e2e/bumdesa/Bumdesa.feature'",
-    "owasp-regression-hs": "cypress run --browser chrome --spec 'cypress/e2e/owasp/Owasp.feature'"
+    "owasp-regression-hs": "cypress run --browser chrome --spec 'cypress/e2e/owasp/Owasp.feature'",
+    "bumdesa-regression-urgent-only": "npm-run-all bumdesa-regression-hs -- --tag @only"
   },
   "author": "dindamaylan",
   "license": "ISC",
@@ -20,6 +21,7 @@
     "cypress": "^13.3.0",
     "cypress-file-upload": "^5.0.8",
     "cypress-xpath": "^2.0.1",
+    "npm-run-all": "^4.1.5",
     "ts-loader": "^9.4.4"
   },
   "dependencies": {
